@@ -12,6 +12,7 @@ Version 1.6 (2.0 Alpha 6)
 -moved button code into separate control class
 -added support for elevator button lighting
 -fixed issue involving elevator door sound playing for non-serviced doors
+-added script console
 
 Version 1.5 (2.0 Alpha 5)
 -------------------------
